# photo-portfolio-store

./: .env.example  README.md  biome.json  openapi.yaml  pnpm-lock.yaml
apps/api/: package.json  vitest.config.ts
apps/api/scripts/: seed.ts
apps/api/src/: instrument.ts  server.ts
apps/api/src/auth/: env.ts  jwt.ts  passwords.ts  permissions.ts  rbac.ts  role-permissions.ts  tokens.ts
apps/api/src/lib/: audit.ts  canonical-json.ts  cursor.ts  db.ts  inference-client.ts  integrations-env.ts  ip-hash.ts  (+7 more)
apps/api/test/: admin-refunds-route.test.ts  audit.test.ts  auth.test.ts  connect.test.ts  consents.test.ts  events.test.ts  face-search.service.test.ts  integration.test.ts  integrations-crypto.test.ts  integrations-route.test.ts  integrations.test.ts  ledger.test.ts  license-pdf.test.ts  me-kyc-route.test.ts  openapi.test.ts  order-splits-route.test.ts  otel.test.ts  pricing-route.test.ts  pricing-tiers.test.ts  products.test.ts  rbac.test.ts  refunds.test.ts  search-face.test.ts  sentry.test.ts  setup.ts  stripe-webhook.test.ts  uploads.test.ts  webhook-signing.test.ts  webhooks-route.test.ts  webhooks.test.ts
apps/inference/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/inference/app/: auth.py  instrument.py  main.py
apps/inference/app/lib/: __init__.py  bib_ocr.py  face_model.py  image.py
apps/inference/app/routes/: _common.py  detect.py  embed.py  health.py  ocr_bib.py  quality.py
apps/inference/tests/: test_bib_ocr.py  test_face.py  test_routes.py
apps/worker/: package.json
apps/worker/src/: index.ts  instrument.ts
apps/worker/test/: derivatives.test.ts  face.test.ts  fulfillment-digital.test.ts  ingest.test.ts  qdrant.test.ts  quality-worker.test.ts  quality.test.ts  retention.test.ts  watermark.test.ts  webhook-delivery.test.ts
docs/: compliance-retention.md  observability-otel.md
docs/compliance/: biometric.md
docs/integrations/: credential-encryption.md
(+57 files in other folders)
