[project]
name = "inference"
version = "0.1.0"
description = "Photo-portfolio-store face / bib / quality inference service"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sentry-sdk[fastapi]>=2.18",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    # Image decoding (used by stubs and by face/ocr when those extras are installed).
    "numpy>=2.1",
    "pillow>=11.0",
    "opencv-python-headless>=4.10",
]

[project.optional-dependencies]
# Heavy ML stacks are opt-in. They require platform-specific build tools
# (MSVC on Windows for insightface; ~500MB paddlepaddle wheels) and are
# always present in the production Docker image (Linux). For Windows / Mac
# local development without these extras, the relevant endpoints return 503.
face = [
    "insightface>=0.7.3",
    "onnxruntime>=1.20",
]
ocr = [
    "paddleocr>=2.9",
    "paddlepaddle>=2.6",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "pyright>=1.1.385",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "RUF",              # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
